--- a/src/app/galeria/galeria.component.css
+++ b/src/app/galeria/galeria.component.css
@@ -4,44 +4,32 @@
 }
 
 .img-slider{
-   width: 100%;
-   height: 35vw;
-   overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 50vh;
+    overflow: hidden;
+    background-image: url(https://cdn.pixabay.com/photo/2014/04/17/23/26/environmental-protection-326923_960_720.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-.img-slider img{
-   width: 100%;
-   height: 100%;
-   object-fit: cover;
-   object-position: center;
-}
-
-.imgLikes{
+p{
    position:relative;
-   top: 8px;
-   left: 40%;
+   bottom: 27px;
+   left: 57%;
+}
+
+i{
+   margin: 1%;
 }
 
 button{
    border: hidden;
    background-color:transparent;
-   margin: 1%;
 }
 button:active{
 color: red;
 }
-
-.imgFooter{
-   display: flex;
-   top: 100px;
-}
-.imagenes{
-   display: flex;
-   align-items: center;
-}
-
-
-
 
 /*h6{
    position: relative;
