--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
-<!--<app-galeria></app-galeria>-->
-
-
-
-
-
 <app-navbar></app-navbar>
+
 <!-- IMAGEN PRINCIPAL -->
 <div class="video__principal">
   <div class="text__video">
@@ -60,7 +55,7 @@
         
 
         <div class="btn__container mt-4">
-          <a href="#" class="btn__alt">IR A GALERÍA</a>
+          <a routerLink="/modal" class="btn__alt">IR A GALERÍA</a>
           <div class="btn__alt-shadow"></div>
         </div>
       </div>
