--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
                   <a href="#" class="nav__link">Inicio</a>
               </li>
               <li class="nav__item">
-                  <a href="#" class="nav__link">Galería</a>
+                  <a  routerLink="/modal"class="nav__link">Galería</a>
               </li>
               <li class="nav__item">
                   <a href="#" class="nav__link">Noticias</a>
