--- a/src/app/galeria/galeria.component.html
+++ b/src/app/galeria/galeria.component.html
@@ -1,10 +1,10 @@
-<!--Iconos Bootstrap-->   
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"> 
+<!--Iconos Bootstrap-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
 
 <!--          Carrousel de imágenes          -->
 <div
   id="carouselExampleControls"
-  class="carousel slide"
+  class="carousel slide my-4"
   data-bs-ride="carousel"
 >
   <div class="carousel-inner">
@@ -80,9 +80,18 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+
+
+
 <!--          Termina Carrousel de imágenes          -->
-<H1>GALERIA</H1>
-<hr/>
+
+<div class="container my-3">
+  <h1 class="titulo">GALERIA</h1>
+  <div class="container__line">
+  </div>
+</div>
+
 
 <!--          Cuadrícula de imágenes          -->
 <section class="container">
@@ -96,13 +105,17 @@
         alt="..."
       /></a>
       <div class="imgFooter">
-      <button><i type="button" class="bi bi-heart-fill"></i></button>
-      <button><i type="button" class="bi bi-reply-fill"></i></button>
-      <p class="imgLikes">386 Me gusta</p>
+      <div class="btns_container">
+        <button><i type="button" class="bi bi-heart-fill mx-2"></i></button>
+        <button><i type="button" class="bi bi-reply-fill"></i></button>
+      </div>
+      <div class="likes__container">
+        <p class="imgLikes pt-3">386 Me gusta</p>
+      </div>
     </div>
     </div>
     <div class="col-12 col-md-4">
-      <h5>Elefante en pradera</h5>
+      <h5 class="titulo">Elefante en pradera</h5>
       <a type="button" (click)="openSM(modal2)"><img
         id="2"
         src="https://cdn.pixabay.com/photo/2019/09/18/21/17/elephant-4487695_960_720.jpg"
@@ -110,13 +123,17 @@
         alt="..."
       /></a>
       <div class="imgFooter">
-        <button><i type="button" class="bi bi-heart-fill"></i></button>
-        <button><i type="button" class="bi bi-reply-fill"></i></button>
-        <p class="imgLikes">386 Me gusta</p>
+        <div class="btns_container">
+          <button><i type="button" class="bi bi-heart-fill mx-2"></i></button>
+          <button><i type="button" class="bi bi-reply-fill"></i></button>
+        </div>
+        <div class="likes__container">
+          <p class="imgLikes pt-3">386 Me gusta</p>
+        </div>
       </div>
     </div>
     <div class="col-12 col-md-4">
-      <h5>Destrucción de tierras</h5>
+      <h5 class="titulo">Destrucción de tierras</h5>
       <a type="button" (click)="openSM(modal3)"><img
         id="3"
         src="https://cdn.pixabay.com/photo/2019/12/09/19/39/landscape-4684217_960_720.jpg"
@@ -124,16 +141,20 @@
         alt="..."
       /></a>
       <div class="imgFooter">
-        <button><i type="button" class="bi bi-heart-fill"></i></button>
-        <button><i type="button" class="bi bi-reply-fill"></i></button>
-        <p class="imgLikes">386 Me gusta</p>
+        <div class="btns_container">
+          <button><i type="button" class="bi bi-heart-fill mx-2"></i></button>
+          <button><i type="button" class="bi bi-reply-fill"></i></button>
+        </div>
+        <div class="likes__container">
+          <p class="imgLikes pt-3">386 Me gusta</p>
+        </div>
       </div>
     </div>
   </article>
 
   <article class="row imagenes">
     <div class="col-12 col-md-4">
-      <h5>Inundaciones</h5>
+      <h5 class="titulo">Inundaciones</h5>
       <a type="button" (click)="openSM(modal4)"><img
         id="4"
         src="https://cdn.pixabay.com/photo/2014/07/13/18/51/high-water-392707_960_720.jpg"
@@ -141,13 +162,17 @@
         alt="..."
       /></a>
       <div class="imgFooter">
-        <button><i type="button" class="bi bi-heart-fill"></i></button>
-        <button><i type="button" class="bi bi-reply-fill"></i></button>
-        <p class="imgLikes">386 Me gusta</p>
+        <div class="btns_container">
+          <button><i type="button" class="bi bi-heart-fill mx-2"></i></button>
+          <button><i type="button" class="bi bi-reply-fill"></i></button>
+        </div>
+        <div class="likes__container">
+          <p class="imgLikes pt-3">386 Me gusta</p>
+        </div>
       </div>
     </div>
     <div class="col-12 col-md-4">
-      <h5>Incendios forestales</h5>
+      <h5 class="titulo">Incendios forestales</h5>
       <a type="button" (click)="openSM(modal5)"><img
         id="5"
         src="https://cdn.pixabay.com/photo/2018/11/25/05/43/climate-change-3836835_960_720.jpg"
@@ -155,13 +180,17 @@
         alt="..."
       /></a>
       <div class="imgFooter">
-        <button><i type="button" class="bi bi-heart-fill"></i></button>
-        <button><i type="button" class="bi bi-reply-fill"></i></button>
-        <p class="imgLikes">386 Me gusta</p>
+        <div class="btns_container">
+          <button><i type="button" class="bi bi-heart-fill mx-2"></i></button>
+          <button><i type="button" class="bi bi-reply-fill"></i></button>
+        </div>
+        <div class="likes__container">
+          <p class="imgLikes pt-3">386 Me gusta</p>
+        </div>
       </div>
     </div>
     <div class="col-12 col-md-4">
-      <h5>Uso de paneles solares</h5>
+      <h5 class="titulo">Uso de paneles solares</h5>
       <a type="button" (click)="openSM(modal6)"><img
         id="6"
         src="https://cdn.pixabay.com/photo/2020/02/06/15/11/solar-4824604_960_720.jpg"
@@ -169,16 +198,20 @@
         alt="..."
       /></a>
       <div class="imgFooter">
-        <button><i type="button" class="bi bi-heart-fill"></i></button>
-        <button><i type="button" class="bi bi-reply-fill"></i></button>
-        <p class="imgLikes">386 Me gusta</p>
+        <div class="btns_container">
+          <button><i type="button" class="bi bi-heart-fill mx-2"></i></button>
+          <button><i type="button" class="bi bi-reply-fill"></i></button>
+        </div>
+        <div class="likes__container">
+          <p class="imgLikes pt-3">386 Me gusta</p>
+        </div>
       </div>
     </div>
   </article>
 
   <article class="row imagenes">
     <div class="col-12 col-md-4">
-      <h5>Solo tenemos un planeta</h5>
+      <h5 class="titulo">Solo tenemos un planeta</h5>
       <a type="button" (click)="openSM(modal7)"><img
         id="7"
         src="https://cdn.pixabay.com/photo/2019/05/10/09/55/demonstration-4193109_960_720.jpg"
@@ -186,28 +219,36 @@
         alt="..."
       /></a>
       <div class="imgFooter">
-        <button><i type="button" class="bi bi-heart-fill"></i></button>
-        <button><i type="button" class="bi bi-reply-fill"></i></button>
-        <p class="imgLikes">386 Me gusta</p>
+        <div class="btns_container">
+          <button><i type="button" class="bi bi-heart-fill mx-2"></i></button>
+          <button><i type="button" class="bi bi-reply-fill"></i></button>
+        </div>
+        <div class="likes__container">
+          <p class="imgLikes pt-3">386 Me gusta</p>
+        </div>
       </div>
     </div>
     <div  class="col-12 col-md-4">
-      <h5>Energía eólica</h5>
+      <h5 class="titulo">Energía eólica</h5>
       <a type="button" (click)="openSM(modal8)"><img
-        
+
         id="8"
         src="https://cdn.pixabay.com/photo/2020/02/09/11/08/windrader-4832701_960_720.jpg"
         class="imagen"
         alt="..."
       /></a>
       <div class="imgFooter">
-      <button><i type="button" class="bi bi-heart-fill"></i></button>
-      <button><i type="button" class="bi bi-reply-fill"></i></button>
-      <p class="imgLikes">386 Me gusta</p>
+        <div class="btns_container">
+          <button><i type="button" class="bi bi-heart-fill mx-2"></i></button>
+          <button><i type="button" class="bi bi-reply-fill"></i></button>
+        </div>
+        <div class="likes__container">
+          <p class="imgLikes pt-3">386 Me gusta</p>
+        </div>
     </div>
     </div>
     <div class="col-12 col-md-4">
-      <h5>Proteger la naturaleza</h5>
+      <h5 class="titulo">Proteger la naturaleza</h5>
       <a type="button" (click)="openSM(modal9)"><img
         id="9"
         src="https://cdn.pixabay.com/photo/2014/04/17/23/26/environmental-protection-326923_960_720.jpg"
@@ -215,9 +256,13 @@
         alt="..."
       /></a>
       <div class="imgFooter">
-        <button><i type="button" class="bi bi-heart-fill"></i></button>
-        <button><i type="button" class="bi bi-reply-fill"></i></button>
-        <p class="imgLikes">386 Me gusta</p>
+        <div class="btns_container">
+          <button><i type="button" class="bi bi-heart-fill mx-2"></i></button>
+          <button><i type="button" class="bi bi-reply-fill"></i></button>
+        </div>
+        <div class="likes__container">
+          <p class="imgLikes pt-3">386 Me gusta</p>
+        </div>
       </div>
     </div>
   </article>
@@ -270,7 +315,7 @@
   <div class="modal-footer">
       <button><i type="button" class="bi bi-heart-fill"></i></button>
       <button><i type="button" class="bi bi-reply-fill"></i></button>
-      <p>386 Me gusta</p>
+      <p class="imgLikes">386 Me gusta</p>
   </div>
 </ng-template>
 
@@ -281,7 +326,7 @@
   <div class="modal-footer">
     <button><i type="button" class="bi bi-heart-fill"></i></button>
     <button><i type="button" class="bi bi-reply-fill"></i></button>
-    <p>386 Me gusta</p>
+    <p class="imgLikes">386 Me gusta</p>
 </div>
 </ng-template>
 
@@ -292,7 +337,7 @@
   <div class="modal-footer">
     <button><i type="button" class="bi bi-heart-fill"></i></button>
     <button><i type="button" class="bi bi-reply-fill"></i></button>
-    <p>386 Me gusta</p>
+    <p class="imgLikes">386 Me gusta</p>
 </div>
 </ng-template>
 
@@ -303,7 +348,7 @@
   <div class="modal-footer">
     <button><i type="button" class="bi bi-heart-fill"></i></button>
     <button><i type="button" class="bi bi-reply-fill"></i></button>
-    <p>386 Me gusta</p>
+    <p class="imgLikes">386 Me gusta</p>
 </div>
 </ng-template>
 
@@ -314,7 +359,7 @@
   <div class="modal-footer">
     <button><i type="button" class="bi bi-heart-fill"></i></button>
     <button><i type="button" class="bi bi-reply-fill"></i></button>
-    <p>386 Me gusta</p>
+    <p class="imgLikes">386 Me gusta</p>
 </div>
 </ng-template>
 
@@ -325,7 +370,7 @@
   <div class="modal-footer">
     <button><i type="button" class="bi bi-heart-fill"></i></button>
     <button><i type="button" class="bi bi-reply-fill"></i></button>
-    <p>386 Me gusta</p>
+    <p class="imgLikes">386 Me gusta</p>
 </div>
 </ng-template>
 
@@ -336,7 +381,7 @@
   <div class="modal-footer">
     <button><i type="button" class="bi bi-heart-fill"></i></button>
     <button><i type="button" class="bi bi-reply-fill"></i></button>
-    <p>386 Me gusta</p>
+    <p class="imgLikes">386 Me gusta</p>
 </div>
 </ng-template>
 
@@ -347,7 +392,7 @@
   <div class="modal-footer">
     <button><i type="button" class="bi bi-heart-fill"></i></button>
     <button><i type="button" class="bi bi-reply-fill"></i></button>
-    <p>386 Me gusta</p>
+    <p class="imgLikes">386 Me gusta</p>
 </div>
 </ng-template>
 
@@ -358,7 +403,7 @@
   <div class="modal-footer">
       <button><i type="button" class="bi bi-heart-fill"></i></button>
       <button><i type="button" class="bi bi-reply-fill"></i></button>
-      <p>386 Me gusta</p>
+      <p class="imgLikes">386 Me gusta</p>
   </div>
 </ng-template>
 
