--- a/src/app/galeria/galeria.component.css
+++ b/src/app/galeria/galeria.component.css
@@ -16,11 +16,6 @@
    object-position: center;
 }
 
-.imgLikes{
-   position:relative;
-   top: 8px;
-   left: 40%;
-}
 
 button{
    border: hidden;
@@ -31,9 +26,13 @@ button:active{
 color: red;
 }
 
+
+
 .imgFooter{
    display: flex;
    top: 100px;
+   justify-content: space-between;
+
 }
 .imagenes{
    display: flex;
@@ -41,6 +40,30 @@ color: red;
 }
 
 
+/* MODIFICICACIONES */
+.container__line{
+  max-width: 1024px;
+  height: 2px;
+  background-color: #9FBAAB;
+}
+
+
+.titulo{
+  color: #005148;
+}
+
+.btns_container{
+  display: flex;
+}
+
+.imgLikes{
+  padding-right: 8px;
+  color: #005148;
+}
+
+.bi{
+  color: #9FBAAB !important;
+}
 
 
 /*h6{
@@ -61,13 +84,13 @@ color: red;
     box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.22);
     text-decoration: none;
  }
- 
+
  .btn:hover{
     background: #f5b14b;
     box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.22);
     color:#fff;
  }
- 
+
  #modalContent{
     position:absolute;
     top:30%;
@@ -84,7 +107,7 @@ color: red;
     border:1px solid #f7be68;
     box-shadow:5px 5px 10px 0px rgba(0,0,0,0.22);
  }
- 
+
  #modal{
     position:fixed;
     top:0px;
@@ -97,7 +120,7 @@ color: red;
     display:none;
     opacity:0;
  }
- 
+
  #modal > a{
     position:fixed;
     top:0px;
@@ -107,12 +130,12 @@ color: red;
     width:100%;
     height:100%;
  }
- 
+
  :target{
     display:block!important;
     opacity:1!important;
  }
- 
+
  #modalContent > a{
     position:absolute;
     top:-4px;
