--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,7 +52,7 @@
           efectos que ello tiene para la población
           mundial.
         </p>
-        
+
 
         <div class="btn__container mt-4">
           <a routerLink="/modal" class="btn__alt">IR A GALERÍA</a>
@@ -65,5 +65,7 @@
   </div>
 
 </div>
+
+<!-- <app-footer></app-footer> -->
 
 <router-outlet></router-outlet>
