--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
                   <a href="#" class="nav__link">Miembros</a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">Contacto</a>
+                <a routerLink="/contact" class="nav__link">Contacto</a>
             </li>
           </ul>
 
