--- a/src/app/components/articlepage/articlepage.component.html
+++ b/src/app/components/articlepage/articlepage.component.html
@@ -15,16 +15,18 @@
     </div>
     <div class="row ">
     <div class="col-12 col-md-6 col-lg-4 mt-4 "*ngFor="let articulo of listArticle ;let i=index">
+
     <img src= {{articulo.img}} class="img-art">
     <p class="titulo-art mt-3">{{articulo.title}}</p>
-
+    
     <p class="preview-art mt-2">
-        {{articpusulo.preview}}
+        {{articulo.preview}}
     </p>
     <div class="btn__container mt-4">
         <a routerLink={{articulo.ruta}} class="btn__alt">IR A GALERÍA</a>
         <div class="btn__alt-shadow"></div>
       </div>
+
     </div>
    </div>
 </div>
