--- a/src/app/components/articlepage/articlepage.component.html
+++ b/src/app/components/articlepage/articlepage.component.html
@@ -19,7 +19,7 @@
     <p class="titulo-art mt-3">{{articulo.title}}</p>
 
     <p class="preview-art mt-2">
-        {{articpusulo.preview}}
+        {{articulo.preview}}
     </p>
     <div class="btn__container mt-4">
         <a routerLink={{articulo.ruta}} class="btn__alt">IR A GALERÍA</a>
