--- a/src/app/components/full-article/full-article.component.html
+++ b/src/app/components/full-article/full-article.component.html
@@ -1,3 +1,4 @@
+
 <article class="VideoContenedor">
     <div class="overlay"></div>
     <video id="VideoResponsive" playsinline="playsinline" autoplay muted loop src="{{respuesta.video}}" ></video>
@@ -10,17 +11,27 @@
     </div>
  </article>
 
- <article class="container full-Art-Con mt-5">
+ <article class="container mt-5 ">
     <p class="titulo-art mt-3">{{respuesta.title}}</p>
     <div class="full-onu">ONU DESARROLLO</div>
     <div class=" full-line"></div>
-    <div class="mt-5">
+    <div class="desText mt-5">
         <img class="img-fullart" src="{{respuesta.img2}}" alt="">
-        <p class="full-des-pho">
-          {{respuesta.sub}}
-        </p>
-        <p class="full-artp mt-5">
-            {{respuesta.content}}
-        </p>
+    </div>
+    <div class="contenido-art">
+      <p class="full-des-pho">
+        {{respuesta.sub}}
+      </p>
+      <p class="full-artp   mt-5 ">
+          {{respuesta.content}}
+      </p>
     </div>
  </article>
+
+ 
+
+
+ 
+
+
+
