--- a/src/app/components/articlepage/articlepage.component.html
+++ b/src/app/components/articlepage/articlepage.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 <br>
 
 
@@ -30,6 +30,8 @@
     </div>
    </div>
 </div>
+<app-tabla></app-tabla>
+<app-contacto></app-contacto>
 
 
 
