--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -10,7 +10,7 @@
 
 <!-- ===== HTML INFO CONTACTO ====== -->
 <hr>
-<div class="container">
+<div class="container arriba">
     <h2 id="Tit1">Información de contacto</h2>
     <table class="d-lg-none">
         <tr>
@@ -33,7 +33,7 @@
     </table>
     <table class="d-none d-lg-block">
         <tr>
-            <td>
+            <td class="px-3">
                 <b>Sede</b><br>
                 <b>Programa de las Naciones Unidas para el Desarrollo</b><br>
                 One United Nations Plaza<br>
