correcion responsive articles

--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -9,7 +9,7 @@
 
 
 <!-- ===== HTML INFO CONTACTO ====== -->
-<hr>
+<hr class="top-linea">
 <div class="container arriba">
     <h2 id="Tit1">Información de contacto</h2>
     <table class="d-lg-none">
