--- a/src/app/components/full-article/full-article.component.css
+++ b/src/app/components/full-article/full-article.component.css
@@ -51,7 +51,7 @@
     top: 1409px;
 }
 .full-line{
-    width: 749px;
+    width: 100%;
     height: 2px;
     left: 358px;
     top: 888px;
@@ -115,7 +115,7 @@ color: #9FBAAB;
 
 
 .contenido-art{
-  width: 800px;
+
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -176,6 +176,13 @@ color: #9FBAAB;
     left: 357px;
     top: 1409px;
 }
+}
+
+@media screen and (min-width: 991px){
+
+  .contenido-art{
+    width: 700px;
+  }
 
 
 }
