--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,10 +15,10 @@
                   <a  routerLink="/modal"class="nav__link">Galería</a>
               </li>
               <li class="nav__item">
-                  <a href="#" class="nav__link">Noticias</a>
+                  <a routerLink="/articulos" class="nav__link">Noticias</a>
               </li>
               <li class="nav__item">
-                  <a href="#" class="nav__link">Miembros</a>
+                  <a routerLink="/miembros" class="nav__link">Miembros</a>
               </li>
               <li class="nav__item">
                 <a routerLink="/contact" class="nav__link">Contacto</a>
