--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,34 +6,34 @@
         POR EL <b>CLIMA</b>
       </h1>
     </div>
-  
+
     <video class="video_prc" autoplay [muted]="'muted'" loop>
       <source src="../assets/video_principal.mp4" />
     </video>
   </div>
-  
+
   <!-- ORGANIZACIONES -->
   <div class="container-fluid bg-principal d-flex align-items-center justify-content-center">
-  
+
     <div class="row fila">
       <img src="../assets/omm.png" alt="" class="org__img" />
       <img src="../assets/onu.png" alt="" class="org__img" />
       <img src="../assets/unep.png" alt="" class="org__img" />
       <img src="../assets/unesco.png" alt="" class="org__img" />
     </div>
-  
+
   </div>
-  
+
   <!-- SOBRE NOSOTROS -->
-  
+
   <div class="container mt-5 mb-4 container__sp">
-  
+
     <div class="row d-flex justify-content-center row_sp">
-  
+
       <div class="col-12 col-sm-6 d-flex justify-content-center img__container">
         <img src="../assets/salvar_planeta.png" class="img__sp" alt="">
       </div>
-  
+
       <div class="col-12 col-sm-6 d-flex justify-content-center content__text">
         <div class="sp__description">
           <h1 class="title">
@@ -50,16 +50,16 @@
             efectos que ello tiene para la población
             mundial.
           </p>
-  
-  
+
+
           <div class="btn__container mt-4">
-            <a routerLink="/modal" class="btn__alt">IR A GALERÍA</a>
+            <a routerLink="/galeria" class="btn__alt">IR A GALERÍA</a>
             <div class="btn__alt-shadow"></div>
           </div>
         </div>
-  
+
       </div>
-  
+
     </div>
-  
+
   </div>
