--- a/src/app/components/articlepage/articlepage.component.html
+++ b/src/app/components/articlepage/articlepage.component.html
@@ -14,16 +14,18 @@
       <div class="linea-art"></div>
     </div>
     <div class="row ">
-    <div class="col-12 col-md-6 col-lg-4 mt-4 "*ngFor="let articulo of listArticle ;let i=index">
+    <div class="col-12 col-md-6 col-lg-4 mt-4 article__complete mb-3"*ngFor="let articulo of listArticle ;let i=index">
 
     <img src= {{articulo.img}} class="img-art">
-    <p class="titulo-art mt-3">{{articulo.title}}</p>
+    <div class="text__article">
+      <p class="titulo-art mt-3">{{articulo.title}}</p>
 
     <p class="preview-art mt-2">
         {{articulo.preview}}
     </p>
+    </div>
     <div class="btn__container mt-4">
-        <a routerLink={{articulo.ruta}} class="btn__alt">IR A GALERÍA</a>
+        <a routerLink={{articulo.ruta}} class="btn__alt">VER MÁS</a>
         <div class="btn__alt-shadow"></div>
       </div>
 
