--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
                   <a href="#" class="nav__link">Inicio</a>
               </li>
               <li class="nav__item">
-                  <a  routerLink="/modal"class="nav__link">Galería</a>
+                  <a  routerLink="/galeria"class="nav__link">Galería</a>
               </li>
               <li class="nav__item">
                   <a routerLink="/articulos" class="nav__link">Noticias</a>
@@ -21,7 +21,7 @@
                   <a routerLink="/miembros" class="nav__link">Miembros</a>
               </li>
               <li class="nav__item">
-                <a routerLink="/contact" class="nav__link">Contacto</a>
+                <a routerLink="/contacto" class="nav__link">Contacto</a>
             </li>
           </ul>
 
