Correccion en Form de  Contacto

--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -63,23 +63,23 @@
         <td>
             <input type="hidden" name="_subject" value="You got mail!">
             <div class="mb-3">
-                <input  type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre*" required>
+                <input  type="text" name="nombre" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre*" required>
                 <hr class="subrayado">
               </div>
               <div class="mb-3">
-                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Apellido*" required>
+                <input type="text" name="apellido" class="form-control" id="exampleInputPassword1" placeholder="Apellido*" required>
                 <hr class="subrayado">
               </div>
               <div class="mb-3">
-                <input class="form-control" id="exampleInputPassword1" placeholder="Teléfono*" required>
+                <input class="form-control" name="telefono" id="exampleInputPassword1" placeholder="Teléfono*" required>
                 <hr class="subrayado">
               </div>
               <div class="mb-3">
-                <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Correo*" required>
+                <input type="email" name="Correo" class="form-control" id="exampleInputPassword1" placeholder="Correo*" required>
                 <hr class="subrayado">
               </div>
               <div class="d-lg-none mb-3">
-                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Comentarios*" required>
+                <input type="text" name="Comentarios" class="form-control" id="exampleInputPassword1" placeholder="Comentarios*" required>
                 <hr class="subrayado">
               </div>
         </td>
